# Person-Attribute-Recognition-MarketDuke

./: README.md  inference.py  test_video.py  train.py
c++/: CMakeLists.txt  g++_readme.txt  main.cpp  readme.txt
net/: models.py
